--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ p {
   padding-bottom: 50px;
 }
 
-.overall-container {
+main {
   position: absolute;
   text-align: left;
   top: 15%;
@@ -55,7 +55,7 @@ p {
   min-height: 100%;
   justify-content: center;
   min-height: calc(100vh - 40px);
-  width: 100%;
+  width: 50%;
 }
 
 .btn {
